# simple-api-actix-web

./: Cargo.toml  Makefile  requests.http
src/: handler.rs  main.rs  model.rs  response.rs
